# Dark-Pool-hook

./: .gitmodules  Cargo.toml  README.md
abis/: OrderServiceManager.json
avs/contract/deployments/avs/: 31337.json
avs/contract/deployments/core/: 31337.json
avs/contract/src/: OrderServiceManager.sol
avs/deployments/avs/: 31337.json
avs/deployments/core/: 31337.json
avs/deployments/hello-world/: 31337.json
avs/script/: AVSDeployer.s.sol  OrderDeployer.s.sol  SetupDistributions.s.sol
avs/script/utils/: AVSDeploymentLib.sol  OrderDeploymentLib.sol
avs/src/: IOrderServiceManager.sol  OrderServiceManager.sol
avs/test/: OrderServiceManager.t.sol  OrderServiceManager.t.txt
hook/: foundry.toml  remappings.txt
hook/script/: HookDeployer.s.sol  OrderServiceManager.sol
hook/script/output/31337/: darkCoWHook.json  unicow_hook_deployment_output.json
hook/src/: CrossChainRouter.sol  DarkCoWHook.sol
lib/: Cargo.toml
lib/src/: lib.rs
operator/: index.ts  register.ts  utils.ts
order-engine/lib/src/: lib.rs
order-engine/program/src/: main.rs
order-engine/server/: Cargo.toml
order-engine/server/src/: main.rs
order-prover/lib/: Cargo.toml
order-prover/lib/src/: lib.rs
order-prover/program/: Cargo.toml
order-prover/program/src/: main.rs
program/: Cargo.toml
